--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
+body {
   text-align: center;
+  font-family: "Helvetica Neue";
+  background-color: rgb(49, 49, 52);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  min-width: 100px;
+  min-height: 40px;
+  border-radius: 10px;
+  margin-right: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+  font-size: smaller;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.main-content {
+  display: flex;
+  flex-direction: row;
+  padding: 2%;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.left-content {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 12px;
+  padding: 15px 50px 15px 50px;
+  width: 200px;
+  max-height: 350px;
+}
+
+@media (max-width:900px) {
+  .main-content {
+      flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+.right-content {
+  display: flex;
+  flex-direction: column;
+  margin: 5% 5% 5% 5%;
+  height: 100%;
+}
+
+.articles {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 3%;
+}
+
+.articles-col {
+
+}
+
+.media-box {
+  background-color: rgb(155, 155, 155);
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  min-width: 350px;
+  border-radius: 10px;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  padding: 10px;
+}
+
+.media-title {
+  font-weight: bold;
+  font-size: medium;
+}
+
+.media-1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.date, .media-2 {
+  color: rgb(86, 85, 85);
+}
+
+
+.media-2 {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+
+.page-button {
+  background-color: rgb(155, 155, 155);
+  font-size: medium;
+  border-radius: 4px;
+  border-style: hidden;
+  transition-duration: 0.4s;
+  padding: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.page-button:hover {
+  background-color: white;
+  cursor: pointer;
 }
